# edge-rl-tomato-ripening

./: .gitignore  .python-version  CLAUDE.md  README.md  TODO.md  claude.md  generate_new_figures.py  generate_thesis_figures.py  implementation_plan.md  improvement_plan.md  requirements.txt  run_box2d_viz.py  run_sim_demo.py
data/: variant_b_labels.csv
digital_twin_viz/: app.js  index.html  renderer.js  server.py  simulator.js  style.css
docs/: architecture.md  k1_calibration.md  research-questions.md  technical-stack.md  thesis-overview.md  timeline.md
docs/plans/: 2026-03-03-dashboard-rewrite-design.md  2026-03-03-dashboard-rewrite.md
docs/reports/: full_proposal_ref.tex  progress_report.tex
docs/thesis/: conclusion.tex  development_roadmap.md  github_repositories.md  methodology_and_results.tex  references.bib  references_study_guide.md  thesis_final.tex  thesis_proposal.tex  thesis_report.tex  thesis_results_draft.tex
edge_firmware/: CMakeLists.txt
edge_firmware/main/: CMakeLists.txt  app_config.h  app_main.c  edge_rl_dht22.c  edge_rl_policy.c  edge_rl_vision.c  esp_camera.h  golden_vectors.h  model_data.h  policy_data.h  policy_weights.h  shared_state.h  task_camera.c  task_policy.c  task_sensors.c  task_telemetry.c  task_vision.c  vision_stats.h
ml_training/: __init__.py  bin_to_c_array.py  config.yaml
ml_training/rl/: __init__.py  calibrate_sim.py  dashboard.py  distill.py  environment.py  export_onnx.py  export_policy_c.py  run_evaluation.py  run_sim.py  run_simulation.py  simulator.py  (+5 more)
tests/: test_continuous_refactor.py  test_environment.py
(+50 files in other folders)
